@@ -6,11 +6,28 @@ dnl
 AC_INIT([kppInterface], [1.2.99], [hpp@laas.fr])
 AC_PREREQ(2.59)
 
+if test "$CFLAGS$CXXFLAGS" = ""; then
+  setdefaultflags=yes
+else
+  setdefaultflags=no
+fi
+
 AM_INIT_AUTOMAKE([foreign no-define])
 
 AC_PROG_CXX
 AC_PROG_INSTALL
 AC_PROG_LIBTOOL
+
+if test "$setdefaultflags" = "yes"; then
+  if test "$GCC" = "yes"; then
+    CFLAGS="$CFLAGS -Wall"
+    AC_MSG_NOTICE([adding default "-Wall" c flags])
+  fi
+  if test "$GXX" = "yes"; then
+    CXXFLAGS="$CXXFLAGS -Wall"
+    AC_MSG_NOTICE([adding default "-Wall" c++ flags])
+  fi
+fi
 
 LICENCE_HOST=`uname -n`
 AC_SUBST(LICENCE_HOST)
