@@ -1,3 +1,6 @@
+2008/04/17
+	33. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
+	
 2008/04/07
 
 	32. Adaptation to KPP version 2.04.500.
